adicion de tabla y estilos

--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
 
 </head>
 <body>
-    
+    <div class="table">
+        <table>
+            <tr class="row-table">
+                <td><label class="nav_bar_labels">LOOPEDIA</label></td>
+                <td><label class="nav_bar_labels">ESTETICA</label></td>
+                <td><label class="nav_bar_labels">MEDICINA ESTETICA</label></td>
+                <td><label class="nav_bar_labels">PIDE TU CITA</label></td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
