logo img added and other items of navigation bar

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <div class="table">
         <table>
             <tr class="row-table">
+                <td><img src="./logo-2.png" alt="main-logo" class="table__img" /></td>
+                <td><label class="nav_bar_labels-first-label">INICIO</label></td>
+                <td><label class="nav_bar_labels">NUESTRA CLINICA</label></td>
+                <td><label class="nav_bar_labels">ODONTOLOGIA</label></td>
                 <td><label class="nav_bar_labels">LOOPEDIA</label></td>
                 <td><label class="nav_bar_labels">ESTETICA</label></td>
                 <td><label class="nav_bar_labels">MEDICINA ESTETICA</label></td>
@@ -25,5 +29,7 @@
             </tr>
         </table>
     </div>
+
+    
 </body>
 </html>
