agregamos label pequeño y estilos

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
         </table>
     </div>
 
+    <div id="padre">
+        <div id="uno">
+            <label class="label">RECIBE</label>
+        </div>
+    </div>
+
     
 </body>
 </html>
