background img complemented and bottom table added

--- a/index.html
+++ b/index.html
@@ -31,10 +31,30 @@
     </div>
 
     <div id="padre">
+        <img src="./background_img.jpg" width="100%" height="500" />
         <div id="uno">
             <label class="label">RECIBE</label>
+            <br>
+            <label class="label-subtext">una sobredosis de belleza y<br>naturalidad</label>
         </div>
     </div>
+
+    <table style="width: 100%;">
+        <tr>
+            <td>
+                <div>
+                    <div style="margin-top: 50px;">
+                        <img src="./logo.png" class="container__img" />
+                        <p class="text__label">Tu clínica de odontología, logopedia y estética en Aturias</p>
+                    </div>
+                    <br>
+                    <p class="text__label">Queremos enseñarte la fuerza que una sonrisa y un gesto hermoso pueden llegar a tener.<br>
+                    Te animamos a dar el paso hacia una belleza saludable.</p>
+                    <p></p>
+                </div>
+            </td>
+        </tr>
+    </table>
 
     
 </body>
