completar tabla inferior y estilos

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <table style="width: 100%;">
         <tr>
             <td>
-                <div>
+                <div class="left">
                     <div style="margin-top: 50px;">
                         <img src="./logo.png" class="container__img" />
                         <p class="text__label">Tu clínica de odontología, logopedia y estética en Aturias</p>
@@ -52,9 +52,13 @@
                     Te animamos a dar el paso hacia una belleza saludable.</p>
                     <p></p>
                 </div>
+                <div class="right">
+                    <img src="./left_img.PNG" style="width: 100%; height: 300px;">
+                </div>
             </td>
         </tr>
     </table>
+
 
     
 </body>
