agregar imagenes y el alt del logo

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <td>
                 <div class="left">
                     <div style="margin-top: 50px;">
-                        <img src="./logo.png" class="container__img" />
+                        <img src="./logo.png" class="container__img" alt="logo_marca"/>
                         <p class="text__label">Tu clínica de odontología, logopedia y estética en Aturias</p>
                     </div>
                     <br>
