BEM methodology applied on some css items

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 </head>
 <body>
-    <div class="table">
+    <div class="container">
         <table>
-            <tr class="row-table">
+            <tr class="container__table-row">
                 <td><img src="./logo-2.png" alt="main-logo" class="table__img" /></td>
                 <td><label class="nav_bar_labels-first-label">INICIO</label></td>
                 <td><label class="nav_bar_labels">NUESTRA CLINICA</label></td>
@@ -48,12 +48,13 @@
                         <p class="text__label">Tu clínica de odontología, logopedia y estética en Aturias</p>
                     </div>
                     <br>
-                    <p class="text__label">Queremos enseñarte la fuerza que una sonrisa y un gesto hermoso pueden llegar a tener.<br>
-                    Te animamos a dar el paso hacia una belleza saludable.</p>
-                    <p></p>
+                    <p class="text__label">
+                    Queremos enseñarte la fuerza que una sonrisa y un gesto hermoso pueden llegar a tener.<br>
+                    Te animamos a dar el paso hacia una belleza saludable.
+                    </p>
                 </div>
                 <div class="right">
-                    <img src="./left_img.PNG" style="width: 100%; height: 300px;">
+                    <img src="./left_img.PNG" class="laboratory__img" alt="consulting_room_img">
                 </div>
             </td>
         </tr>
