Whatsapp buttom added using table and main labels styled with nwe font-size and color

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div id="uno">
             <label class="label">RECIBE</label>
             <br>
-            <label class="label-subtext">una sobredosis de belleza y<br>naturalidad</label>
+            <p class="label-subtext">una sobredosis de belleza y<br>naturalidad</p>
         </div>
     </div>
 
@@ -55,7 +55,22 @@
                     <p></p>
                 </div>
                 <div class="right">
-                    <img src="./left_img.PNG" style="width: 100%; height: 300px;">
+                    <div id="padre">
+                        <img src="./left_img.PNG" style="width: 100%; height: 300px;">
+                        <div id="uno-dos">
+                            <table>
+                                <tr>
+                                    <td>
+                                        <button type="button" class="btn btn-light"><b>Citas</b> e información</button>
+                                    </td>
+                                    <td>
+                                        <img src="w-logo.jpg" alt="logo" style="width: 50px; height: 50px; border-radius: 100%;">
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                    
                 </div>
             </td>
         </tr>
