--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     </head>
 <body>
 
-    <div class="table">
+    <div class="container">
         <table>
-            <tr class="row-table">
+            <tr class="container__table-row">
                 <td><img src="./logo-2.png" alt="main-logo" class="table__img" /></td>
-                <td><label class="nav_bar_labels-first-label">INICIO</label></td>
+                <td><label class="table__label-rose">INICIO</label></td>
                 <td><label class="nav_bar_labels">NUESTRA CLINICA</label></td>
                 <td><label class="nav_bar_labels">ODONTOLOGIA</label></td>
                 <td><label class="nav_bar_labels">LOOPEDIA</label></td>
