aplicacion metodologia BEM

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
             <tr class="container__table-row">
                 <td><img src="./logo-2.png" alt="main-logo" class="table__img" /></td>
                 <td><label class="table__label-rose">INICIO</label></td>
-                <td><label class="nav_bar_labels">NUESTRA CLINICA</label></td>
-                <td><label class="nav_bar_labels">ODONTOLOGIA</label></td>
-                <td><label class="nav_bar_labels">LOOPEDIA</label></td>
-                <td><label class="nav_bar_labels">ESTETICA</label></td>
-                <td><label class="nav_bar_labels">MEDICINA ESTETICA</label></td>
-                <td><label class="nav_bar_labels">PIDE TU CITA</label></td>
+                <td><label class="table__label">NUESTRA CLINICA</label></td>
+                <td><label class="table__label">ODONTOLOGIA</label></td>
+                <td><label class="table__label">LOOPEDIA</label></td>
+                <td><label class="table__label">ESTETICA</label></td>
+                <td><label class="table__label">MEDICINA ESTETICA</label></td>
+                <td><label class="table__label">PIDE TU CITA</label></td>
             </tr>
         </table>
     </div>
