BEM applied on label classes and images

--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
     <table style="width: 100%;">
         <tr>
             <td>
-                <div class="left">
+                <div class="container__left">
                     <div style="margin-top: 50px;">
                         <img src="./logo.png" class="container__img" />
-                        <p class="text__label">Tu clínica de odontología, logopedia y estética en Aturias</p>
+                        <p class="container__label-left">Tu clínica de odontología, logopedia y estética en Aturias</p>
                     </div>
                     <br>
-                    <p class="text__label">Queremos enseñarte la fuerza que una sonrisa y un gesto hermoso pueden llegar a tener.<br>
+                    <p class="container__label-left">Queremos enseñarte la fuerza que una sonrisa y un gesto hermoso pueden llegar a tener.<br>
                     Te animamos a dar el paso hacia una belleza saludable.</p>
                     <p></p>
                 </div>
-                <div class="right">
+                <div class="container__right">
                     <div id="padre">
-                        <img src="./left_img.PNG" style="width: 100%; height: 300px;">
+                        <img src="./left_img.PNG" class="container__img-right">
                         <div id="uno-dos">
                             <table>
                                 <tr>
