aplicacion metodologia BEM overflow

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </table>
     </div>
 
-    <div id="padre">
+    <div id="container__overflow">
         <img src="./background_img.jpg" width="100%" height="500" />
         <div id="uno">
             <label class="label">RECIBE</label>
@@ -55,7 +55,7 @@
                     <p></p>
                 </div>
                 <div class="container__right">
-                    <div id="padre">
+                    <div id="container__overflow">
                         <img src="./left_img.PNG" class="container__img-right">
                         <div id="uno-dos">
                             <table>
