--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                         <button type="button" class="btn btn-light"><b>Citas</b> e información</button>
                                     </td>
                                     <td>
-                                        <img src="w-logo.jpg" alt="logo" style="width: 50px; height: 50px; border-radius: 100%;">
+                                        <img src="w-logo.jpg" alt="logo" class="container__buttom">
                                     </td>
                                 </tr>
                             </table>
